--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,5 @@ services:
     environment:
       - MYSQL_RANDOM_ROOT_PASSWORD=yes
       - MYSQL_DATABASE=app_db
-      - MYSQL_USER=user
+      - MYSQL_USER=app
       - MYSQL_PASSWORD=pass
